--- a/nlp.html
+++ b/nlp.html
@@ -67,6 +67,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://sparkcognition.applytojob.com/apply/fzK30wyrGv/QA-Engineer-DeepNLP'>QA Engineer - DeepNLP - SparkCognition - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://sparkcognition.applytojob.com/apply/CbTOgT6iN4/Front-End-Engineer-DeepNLP'>Front End Engineer - DeepNLP - SparkCognition - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/roam/ad8914f2-0d4d-40b7-8063-c8b8096937f0'>Roam - NLP Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -118,7 +126,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thefarmersdog/jobs/4491840002'>Job Application for Data Scientist - Natural Language Processing at The Farmer's Dog</a></h5> 
+<h5><a href='https://boards.greenhouse.io/thefarmersdog/jobs/4491840002'>Job Application for Data Scientist - Natural Language Processing at The Farmer's Dog</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -180,7 +188,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1905351'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1905351'>Job Application for Research Scientist (NLP, IR, Complex Networks, Recommender Systems) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -194,7 +202,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1896220'>Job Application for Research Engineer - AllenNLP at The Allen Institute for Artificial Intelligence</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thealleninstitute/jobs/1896220'>Job Application for Research Engineer - AllenNLP at The Allen Institute for Artificial Intelligence</a></h5> 
 <p><span class="badge badge-light">Seattle Irvine</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -328,7 +336,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1851526'>Job Application for Research Internship - Spring 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1851526'>Job Application for Research Internship - Spring 2020 (NLP, Computer Vision, or Machine Learning) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
@@ -354,7 +362,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 machine learning to surface new knowledge. We are a VC-backed tech company
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://axur.workable.com/jobs/1111409'>Axur. Digital Risk Protection - Jobs: Data Scientist - NLP - Apply online</a></h5> 
+<h5><a href='https://axur.workable.com/jobs/1111409'>Axur. Digital Risk Protection - Jobs: Data Scientist - NLP - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>20 Ago 2019 ... Como Analista de Machine Learning na Axur, seu desafio ser? trabalhar com 
 processamento de linguagem natural, analisando dados e criando algoritmos 
@@ -381,7 +389,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-30</p>
 <hr/>
-<h5><a href='https://adarga.recruitee.com/o/natural-language-processing-data-scientist'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adarga.recruitee.com/o/natural-language-processing-data-scientist'>
       Natural Language Processing Data Scientist - Adarga
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -466,7 +474,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114595-internship-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Internship in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999693114595-internship-in-natural-language-processing-and-semantic-reasoning'>Bosch Group Internship in Natural Language Processing and Semantic Reasoning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Renningen, Germany</span></p>
 <p>Posted on: 2019-08-09</p>
 <hr/>
@@ -478,7 +486,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-08</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/drwfr/jobs/1796523'>Job Application for Scientifique de donn?es - NLP at DRW Montreal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/drwfr/jobs/1796523'>Job Application for Scientifique de donn?es - NLP at DRW Montreal</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-08-06</p>
 <hr/>
@@ -487,21 +495,13 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p>6 days ago ... Apply to Senior Data Scientist, NLP at Fractal Analytics in Mumbai, Maharashtra, 
 India.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/72EF9FC811'>Amplexor - Jobs: NLP Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/72EF9FC811'>Amplexor - Jobs: NLP Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 27, 2019 ... Apply online for the job of NLP Engineer at Amplexor.</p>
 <hr/>
 <h5><a href='https://legartis.workable.com/jobs/1089204'>Machine Learning Engineer (NLP) - Apply online - Legartis - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Machine Learning Engineer (NLP) at Legartis.</p>
-<hr/>
-<h5><a href='https://legartis.workable.com/j/A995599866'>Legartis - Jobs: Machine Learning Engineer (NLP) - Apply online</a></h5> 
-<p><span class="badge badge-light">Z?rich, Zurich, Switzerland</span></p>
-<p>Posted on: 2019-08-02</p>
-<hr/>
-<h5><a href='https://10clouds.workable.com/jobs/1084159'>Jobs: Python Developer (NLP & Data Science) - Apply ... - 10Clouds</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 22, 2019 ... Apply online for the job of Python Developer (NLP & Data Science) at 10Clouds.</p>
 <hr/>
 
 
