--- a/data-science.html
+++ b/data-science.html
@@ -95,7 +95,7 @@
 <p><span class="badge badge-light">Jakarta</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rappi/4be3f891-53d3-4222-9517-0d8a05701bec'>Rappi - Sr Operations Researcher - Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/rappi/4be3f891-53d3-4222-9517-0d8a05701bec'>Rappi - Sr Operations Researcher - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -141,11 +141,11 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698605341-data-scientist-cambridge-or-rtp-'>Biogen Data Scientist (Cambridge or RTP) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698605341-data-scientist-cambridge-or-rtp-'>Biogen Data Scientist (Cambridge or RTP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge Cambridge Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/generalassembly/jobs/935268'>Job Application for Data Science Instructor - Local Lead at General Assembly</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/generalassembly/jobs/935268'>Job Application for Data Science Instructor - Local Lead at General Assembly</a></h5> 
 <p><span class="badge badge-light">Los Angeles  New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -153,7 +153,7 @@
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698592425-data-scientist-user-research-lab-'>Ubisoft Data Scientist (user research lab) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698592425-data-scientist-user-research-lab-'>Ubisoft Data Scientist (user research lab) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -177,11 +177,11 @@
 <p><span class="badge badge-light">Springfield, VASpringfield, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698578064-junior-data-scientist-m-f-'>Ubisoft Junior Data Scientist (M/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698578064-junior-data-scientist-m-f-'>Ubisoft Junior Data Scientist (M/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ok3Oafw5&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nY8qpMwc'>Freedom Financial Network Careers - Contractor-Data Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ok3Oafw5&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nY8qpMwc'>Freedom Financial Network Careers - Contractor-Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -231,7 +231,7 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://simpletire.applytojob.com/apply/qcjI8KBSgV/Data-Science-Analyst'>Data Science Analyst - Simpletire - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://simpletire.applytojob.com/apply/qcjI8KBSgV/Data-Science-Analyst'>Data Science Analyst - Simpletire - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -274,12 +274,12 @@
 <p>5 days ago ... Data Scientist. The Challenge: Do you want to be a Data Scientist? Are you 
 innately curious, a natural born problem solver, a contrarian or a risk taker?</p>
 <hr/>
-<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-DC-Washington-901-15th-St-NW/Data-Scientist--Senior_R0071614-1'>Data Scientist, Senior</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-DC-Washington-901-15th-St-NW/Data-Scientist--Senior_R0071614-1'>Data Scientist, Senior</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Data Scientist, Senior. The Challenge: Do you want to be a Data Scientist? -Are 
 you innately curious, a natural born problem solver, a contrarian or a risk taker?</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Westlake-Village/Data-Scientist--Natural-Language-Processing--NLP--ML---Text-Analytics_19070308-2'>Data Scientist: Natural Language Processing (NLP)</a></h5> 
+<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Westlake-Village/Data-Scientist--Natural-Language-Processing--NLP--ML---Text-Analytics_19070308-2'>Data Scientist: Natural Language Processing (NLP)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 21, 2019 ... Create ML models for Advanced OCR and Cognitive Data Extraction capability 
 as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...</p>
@@ -368,7 +368,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thinkingmachin.es/careers/web-engineer/'>Web Engineer - Thinking Machines Data Science</a></h5> 
+<h5><a href='https://thinkingmachin.es/careers/web-engineer/'>Web Engineer - Thinking Machines Data Science</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -448,7 +448,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494051002'>Job Application for Data Scientist at Snowflake</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494051002'>Job Application for Data Scientist at Snowflake</a></h5> 
 <p><span class="badge badge-light">Washington, United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
